--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>MyLibries</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css\styleIndex.css">
 </head>
 <body>
 	<ul>
-  <a href=""><li>Cadastro</li></a>
-  <a href=""><li>Empréstimo</li></a>
-  <a href=""><li>Relatório</li></a>
-  <a href=""><li>Sair</li></a>
-</ul>  
+	  <a href=""><li>Cadastro</li></a>
+	  <a href="emprestimos.html"><li>Empréstimo</li></a>
+	  <a href=""><li>Relatório</li></a>
+	  <a href=""><li>Sair</li></a>
+	</ul>  
 </body>
 </html>
