--- a/emprestimos.html
+++ b/emprestimos.html
@@ -10,25 +10,32 @@
 	<form action="">
 		<fieldset>
 			<legend>Cadastrar Empréstimos</legend>
-			<select name="" id="">
-				<option value="">Escolha a biblioteca</option>
+			<select name="teste" id="bib">
+				<option value="0">Escolha a biblioteca</option>
+				<option value="1">CD</option>
+				<option value="2">DVD</option>
+				<option value="3">LIVRO</option>
+
 			</select>
 
-			<select name="" id="">
-				<option value="">Escolha o item</option>
+			<select name="" id="item">
+				<option value="0">Escolha o item</option>
 			</select>
 
-			<input type="date">
+			<input type="date" id="data">
 
-			<input type="text" placeholder="Nome">
+			<input type="text" id="nome" placeholder="Nome">
 
-			<textarea name="" id="" cols="30" rows="10"></textarea>
+			<textarea id="text" name="" id="" cols="30" rows="10"></textarea>
 
-			<input type="submit" value="Salvar">
+			<input type="submit" value="Salvar" onclick="insert()">
 
 			<input type="reset" value="Limpar">
+			<input type="submit" value="select" onclick="select()">
 
 		</fieldset>
 	</form>
+
+	<script src="js\scriptEmprestimos.js"></script>
 </body>
 </html>
