--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>MyLibraries - Acesse sua conta</title>
 	<link rel="stylesheet" href="css/styleLogin.css">
-	<script src="js/ConexaoBancoDadosControle.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="js/UsuarioDAO.js" type="text/javascript" charset="utf-8" async defer></script>
 	<script src="js/LoginControle.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
@@ -23,7 +24,7 @@
 				<label for="senha">Senha</label>
 				<input id="senha" type="password" placeholder="Senha" required="required">
 
-				<button id="botaoAcessar" class="botao" type="submit">Acessar</button>
+				<button id="botaoAcessar" class="botao" type="buttom">Acessar</button>
 				
 				<a id="botaoCadastrar" class="botao" href="cadastroLogin.html" >Cadastrar-se</a>
 
