--- a/emprestimos.html
+++ b/emprestimos.html
@@ -12,9 +12,9 @@
 			<legend>Cadastrar Empréstimos</legend>
 			<select name="teste" id="biblioteca">
 				<option value="0">Escolha a biblioteca</option>
-				<option value="1">CD</option>
-				<option value="2">DVD</option>
-				<option value="3">LIVRO</option>
+				<option value="1">MUSICAS</option>
+				<option value="2">FILMES</option>
+				<option value="3">LIVROS</option>
 			</select>
 
 			<select name="" id="item">
@@ -24,6 +24,8 @@
 			<input type="date" id="data">
 
 			<input type="text" id="nome" placeholder="Nome">
+
+			<input type="hidden" id="cod">
 
 			<textarea id="text" name="" id="" cols="30" rows="10"></textarea>
 
