--- a/pageRunner.html
+++ b/pageRunner.html
@@ -9,9 +9,9 @@
 <body>
 	<ul>
 	  <a href=""><li>Cadastro</li></a>
-	  <a href="emprestimos.html"><li>Empréstimo</li></a>
+	  <a id="emprestimo" href="emprestimos.html"><li>Empréstimo</li></a>
 	  <a href=""><li>Relatório</li></a>
 	  <a href=""><li>Sair</li></a>
-	</ul>  
+	</ul> 
 </body>
 </html>
