--- a/emprestimos.html
+++ b/emprestimos.html
@@ -29,7 +29,7 @@
 
 			<textarea id="text" name="" id="" cols="30" rows="10"></textarea>
 
-			<input id="salvar" type="submit" value="Salvar">
+			<input id="salvar" type="submit" value="Salvar" onclick="window.location.reload()">
 
 			<input type="reset" value="Limpar">
 			<input type="submit" value="Buscar" id="s">
