--- a/pageRunner.html
+++ b/pageRunner.html
@@ -13,5 +13,9 @@
 	  <a href=""><li>Relatório</li></a>
 	  <a href=""><li>Sair</li></a>
 	</ul> 
+
+	<script src="js\ConexaoBancoDados.js"></script>
+	<script src="js\emprestimosControle.js"></script>
+	<script src="js\pageRunnerControle.js"></script>
 </body>
 </html>
