Tela Login e tela principal
-> Finalizada tela de login.
-> Começando a planejar tela principal da aplicação.

--- a/cadastroLogin.html
+++ b/cadastroLogin.html
@@ -3,16 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
 	<title>Novo cadastro</title>
 	<link rel="stylesheet" href="css/styleCadastroLogin.css">
 	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
 	<script src="js/UsuarioDAO.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="js/UsuarioControle.js" type="text/javascript" charset="utf-8" async defer></script>
 	<script src="js/CadastroLoginControle.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
 	
 	<div>
-		<form id="formularioCadastro">
+		<form id="formularioCadastro" action="" method="get" accept-charset="utf-8">
 			<fieldset>
 				
 				<legend>Cadastro MyLibraries</legend>
@@ -36,7 +38,6 @@
 			</fieldset>
 			
 		</form>
-
 	</div>
 
 </body>
