--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
 	<title>MyLibraries - Acesse sua conta</title>
 	<link rel="stylesheet" href="css/styleLogin.css">
 	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
-	<script src="js/UsuarioControle.js" type="text/javascript" charset="utf-8" async defer></script>
 	<script src="js/UsuarioDAO.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="js/UsuarioControle.js" type="text/javascript" charset="utf-8" async defer></script>
 	<script src="js/LoginControle.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
@@ -30,7 +30,7 @@
 					<div class="botoes">
 						<button id="botaoAcessar" class="botao" type="submit">Acessar</button>
 						
-						<a id="botaoCadastrar" class="botao" href="cadastroLogin.html" >Cadastrar-se</a>
+						<a id="botaoCadastrar" class="botao" href="cadastroUsuario.html" >Cadastrar-se</a>
 					</div>
 	
 				</fieldset>
