--- a/principal.html
+++ b/principal.html
@@ -7,6 +7,7 @@
 	<title>My Libraries</title>
 	<link rel="stylesheet" href="">
 	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="js/UsuarioDAO.js" type="text/javascript" charset="utf-8" async defer></script>
 	<script src="js/PrincipalControle.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
