--- a/principal.html
+++ b/principal.html
@@ -6,9 +6,6 @@
 	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
 	<title>My Libraries</title>
 	<link rel="stylesheet" href="">
-	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
-	<script src="js/UsuarioDAO.js" type="text/javascript" charset="utf-8" async defer></script>
-	<script src="js/PrincipalControle.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
 
@@ -20,9 +17,16 @@
 		</ul> 
 	</div>
 
+	<div id = "areaUsuario">
+		
+	</div>
+
 	<div>
 		<a id = "linkContaUsuario" href="contaUsuario.html">Conta</a>
 	</div>
 
+	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="js/UsuarioDAO.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="js/PrincipalControle.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
