--- a/contaUsuario.html
+++ b/contaUsuario.html
@@ -5,18 +5,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Conta do usuário</title>
 	<link rel="stylesheet" href="">
-	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
-	<script src="js/UsuarioDAO.js" type="text/javascript" charset="utf-8" async defer></script>
-	<script src="js/ContaUsuarioControle.js" type="text/javascript" charset="utf-8" async defer></script>
 
+
+</head>
+<body>
 	<fieldset>
 		<h1>Conta do usuário</h1>
 
-			<label for="nome">Nome ou apelido</label>
+			<label for="nome">Nome</label>
 			<input id="nome" type="text" placeholder="Nome ou apelido" required="required">					
 
 			<label for="email">E-mail</label>
-			<input id="email" type="email" placeholder="E-mail" required="required">
+			<input id="email" type="email" placeholder="E-mail" readonly="true">
 
 			<label for="senha1">Senha</label>
 			<input id="senha1" type="password" placeholder="Senha" required="required">
@@ -25,9 +25,10 @@
 			<input id="senha2" type="password" placeholder="Confirme a senha" required="required">
 			
 	</fieldset>
-
-</head>
-<body>
+	
+	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="js/UsuarioDAO.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="js/ContaUsuarioControle.js" type="text/javascript" charset="utf-8" async defer></script>
 	
 </body>
 </html>
