--- a/principal.html
+++ b/principal.html
@@ -11,7 +11,7 @@
 
 	<div>
 		<ul>
-		  <a href=""><li>Bibliotecas</li></a>
+		  <a href="bibliotecas.html"><li>Bibliotecas</li></a>
 		  <a id="emprestimo" href="emprestimos.html"><li>Empréstimos</li></a>
 		  <a href=""><li>Relatórios</li></a>
 		</ul> 
@@ -23,6 +23,7 @@
 
 	<div>
 		<a id = "linkContaUsuario" href="contaUsuario.html">Conta</a>
+		<button id = "botaoSair" type="button">Sair</button>
 	</div>
 
 	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
