--- a/bibliotecas.html
+++ b/bibliotecas.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Bibliotecas</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="css/styleBibliotecas.css">
 </head>
 <body>
 
@@ -40,13 +40,13 @@
 			<table id = "tabelaLivros">
 				<thead>
 					<tr>
-						<th colspan="4" rowspan="" headers="" scope="">Livros</th>
+						<th class = "cabecalho" colspan="7" rowspan="" headers="" scope="">Livros</th>
 					</tr>
 					<tr>
-						<th colspan="1" rowspan="" headers="">Nome</th>
-						<th colspan="2" rowspan="" headers="" scope="">Classificação</th>
-						<th colspan="3" rowspan="" headers="" scope="">Lista de bibliotecas desejadas</th>
-						<th colspan="4" rowspan="" headers="" scope="">Ações</th>
+						<th class = "titulo" colspan="1" rowspan="" headers="">Nome</th>
+						<th class = "titulo" colspan="2" rowspan="" headers="" scope="">Classificação</th>
+						<th class = "titulo" colspan="3" rowspan="" headers="" scope="">Lista de bibliotecas desejadas</th>
+						<th class = "titulo" colspan="4" rowspan="" headers="" scope="">Ações</th>
 					</tr>
 				</thead>
 				<tbody id = "dadosTabelaLivros">
@@ -58,13 +58,13 @@
 			<table id = "tabelaMusicas">
 				<thead>
 					<tr>
-						<th colspan="4" rowspan="" headers="" scope="">Músicas</th>
+						<th class = "cabecalho" colspan="7" rowspan="" headers="" scope="">Músicas</th>
 					</tr>
 					<tr>
-						<th colspan="1" rowspan="" headers="">Nome</th>
-						<th colspan="2" rowspan="" headers="" scope="">Classificação</th>
-						<th colspan="3" rowspan="" headers="" scope="">Lista de bibliotecas desejadas</th>
-						<th colspan="4" rowspan="" headers="" scope="">Ações</th>
+						<th class = "titulo" colspan="1" rowspan="" headers="">Nome</th>
+						<th class = "titulo" colspan="2" rowspan="" headers="" scope="">Classificação</th>
+						<th class = "titulo" colspan="3" rowspan="" headers="" scope="">Lista de bibliotecas desejadas</th>
+						<th class = "titulo" colspan="4" rowspan="" headers="" scope="">Ações</th>
 					</tr>
 				</thead>
 				<tbody id = "dadosTabelaMusicas">
@@ -76,13 +76,13 @@
 			<table id = "tabelaVideos">
 				<thead>
 					<tr>
-						<th colspan="4" rowspan="" headers="" scope="">Vídeos</th>
+						<th class = "cabecalho" colspan="7" rowspan="" headers="" scope="">Vídeos</th>
 					</tr>
 					<tr>
-						<th colspan="1" rowspan="" headers="">Nome</th>
-						<th colspan="2" rowspan="" headers="" scope="">Classificação</th>
-						<th colspan="3" rowspan="" headers="" scope="">Lista de bibliotecas desejadas</th>
-						<th colspan="4" rowspan="" headers="" scope="">Ações</th>
+						<th class = "titulo" colspan="1" rowspan="" headers="">Nome</th>
+						<th class = "titulo" colspan="2" rowspan="" headers="" scope="">Classificação</th>
+						<th class = "titulo" colspan="3" rowspan="" headers="" scope="">Lista de bibliotecas desejadas</th>
+						<th class = "titulo" colspan="4" rowspan="" headers="" scope="">Ações</th>
 					</tr>
 				</thead>
 				<tbody id = "dadosTabelaVideos">
