--- a/bibliotecas.html
+++ b/bibliotecas.html
@@ -5,11 +5,24 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Bibliotecas</title>
 	<link rel="stylesheet" href="css/styleBibliotecas.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
-	<fieldset id = "painelPrincipal">	
-		<h1>Bibliotecas</h1>
+	<fieldset id = "painelPrincipal">
+
+		<h1>My Libraries</h1>
+		<h2>Bibliotecas</h2>
+
+
+	<div id = "menuPrincipal">
+		<a class = "menu" href="principal.html">Principal</a>
+		<a class = "menu" href="bibliotecas.html">Bibliotecas</a>
+		<a class = "menu" href="emprestimos.html">Empréstimos</a>
+		<a class = "menu" href="">Relatórios</a>
+	</div>
+
+
 		<form id = "formularioBiblioteca" action="" method = "POST" accept-charset = "utf-8">
 			<input id = "bibliotecaId" type="number" hidden = "true">
 			<label for = "nome">Nome</label>
