Criado o index.html

--- a/cadastroUsuario.html
+++ b/cadastroUsuario.html
@@ -35,7 +35,7 @@
 				<div class = "botoes">
 					<button id="botaoCadastrar" class="botao" type="submit">Cadastrar</button>
 					
-					<a id="botaoVoltar" class="botao" href="login.html">Voltar</a>
+					<a id="botaoVoltar" class="botao" href="index.html">Voltar</a>
 				</div>
 
 
