--- a/bibliotecas.html
+++ b/bibliotecas.html
@@ -44,7 +44,7 @@
 			<input id = "desejado" type="checkbox">
 			<label for = "desejado">Adicionar a minha lista de bibliotecas desejadas</label>
 			<button id="botaoSalvar" class="botao" type="submit">Salvar</button>
-			<a id="botaoVoltar" class="botao" href="principal.html">Voltar</a>
+			<!-- <a id="botaoVoltar" class="botao" href="principal.html">Voltar</a> -->
 		</form>
 	</fieldset>
 
