--- a/principal.html
+++ b/principal.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+	<!-- <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE"> -->
 	<title>My Libraries</title>
 	<link rel="stylesheet" href="css/stylePrincipal.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300italic' rel='stylesheet' type='text/css'>
@@ -11,6 +11,7 @@
 <body>
 
 	<h1>My Libraries</h1>
+	<h2>Bem vindo!</h2>
 
 	<div id = "painelUsuario">
 		<div id = "areaUsuarioBotoes">
